src/nom/snapshots/lp_parser_rs__nom__lp_problem__test__minified_example.snap
---
source: src/nom/lp_problem.rs
expression: "&problem"
---
name: "Problem name: diet"
sense: Minimize
objectives:
  obj1:
    name: obj1
    coefficients:
      - var_name: x
        coefficient: -0.5
      - var_name: y
        coefficient: -2
      - var_name: z
        coefficient: -8
  obj2:
    name: obj2
    coefficients:
      - var_name: y
        coefficient: 1
      - var_name: x
        coefficient: 1
      - var_name: z
        coefficient: 1
  obj3:
    name: obj3
    coefficients:
      - var_name: z
        coefficient: 10
      - var_name: x
        coefficient: -2.5
      - var_name: y
        coefficient: 1
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - var_name: x1
        coefficient: 3
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 2
    operator: EQ
    rhs: 30
  c2:
    type: Standard
    name: c2
    coefficients:
      - var_name: x1
        coefficient: 2
      - var_name: x2
        coefficient: 1
      - var_name: x3
        coefficient: 3
      - var_name: x4
        coefficient: 1
    operator: GTE
    rhs: 15
  c3:
    type: Standard
    name: c3
    coefficients:
      - var_name: x2
        coefficient: 2
      - var_name: x4
        coefficient: 3
    operator: LTE
    rhs: 25
  csos1:
    type: SOS
    name: csos1
    sos_type: S1
    weights:
      - var_name: V1
        coefficient: 1
      - var_name: V3
        coefficient: 2
      - var_name: V5
        coefficient: 3
  csos2:
    type: SOS
    name: csos2
    sos_type: S2
    weights:
      - var_name: V2
        coefficient: 2
      - var_name: V4
        coefficient: 1
      - var_name: V5
        coefficient: 2.5
variables:
  Route_A_1:
    name: Route_A_1
    var_type: General
  Route_A_2:
    name: Route_A_2
    var_type: General
  Route_A_3:
    name: Route_A_3
    var_type: General
  V1:
    name: V1
    var_type: SOS
  V2:
    name: V2
    var_type: SOS
  V3:
    name: V3
    var_type: SOS
  V4:
    name: V4
    var_type: SOS
  V5:
    name: V5
    var_type: SOS
  V8:
    name: V8
    var_type: Binary
  X31:
    name: X31
    var_type: Integer
  X32:
    name: X32
    var_type: Integer
  x:
    name: x
    var_type: Free
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      LowerBound: 1
  x2dfsdf:
    name: x2dfsdf
    var_type:
      DoubleBound:
        - 100
        - -1
  x3:
    name: x3
    var_type: Free
  x4:
    name: x4
    var_type: Free
  y:
    name: y
    var_type: SemiContinuous
  z:
    name: z
    var_type: Free
