src/nom/snapshots/lp_parser_rs__nom__lp_problem__test__serialization_lifecycle-2.snap
---
source: src/nom/lp_problem.rs
expression: "&problem"
---
LPProblem {
    name: Some(
        "Problem name: diet",
    ),
    sense: Minimize,
    objectives: [
        Objective {
            name: Some(
                "obj1",
            ),
            coefficients: [
                Coefficient {
                    var_name: "x",
                    coefficient: -0.5,
                },
                Coefficient {
                    var_name: "y",
                    coefficient: -2.0,
                },
                Coefficient {
                    var_name: "z",
                    coefficient: -8.0,
                },
            ],
        },
        Objective {
            name: Some(
                "obj2",
            ),
            coefficients: [
                Coefficient {
                    var_name: "y",
                    coefficient: 1.0,
                },
                Coefficient {
                    var_name: "x",
                    coefficient: 1.0,
                },
                Coefficient {
                    var_name: "z",
                    coefficient: 1.0,
                },
            ],
        },
        Objective {
            name: Some(
                "obj3",
            ),
            coefficients: [
                Coefficient {
                    var_name: "z",
                    coefficient: 10.0,
                },
                Coefficient {
                    var_name: "x",
                    coefficient: -2.5,
                },
                Coefficient {
                    var_name: "y",
                    coefficient: 1.0,
                },
            ],
        },
    ],
    constraints: [
        Standard {
            name: Some(
                "c1",
            ),
            coefficients: [
                Coefficient {
                    var_name: "x1",
                    coefficient: 3.0,
                },
                Coefficient {
                    var_name: "x2",
                    coefficient: 1.0,
                },
                Coefficient {
                    var_name: "x3",
                    coefficient: 2.0,
                },
            ],
            operator: EQ,
            rhs: 30.0,
        },
        Standard {
            name: Some(
                "c2",
            ),
            coefficients: [
                Coefficient {
                    var_name: "x1",
                    coefficient: 2.0,
                },
                Coefficient {
                    var_name: "x2",
                    coefficient: 1.0,
                },
                Coefficient {
                    var_name: "x3",
                    coefficient: 3.0,
                },
                Coefficient {
                    var_name: "x4",
                    coefficient: 1.0,
                },
            ],
            operator: GTE,
            rhs: 15.0,
        },
        Standard {
            name: Some(
                "c3",
            ),
            coefficients: [
                Coefficient {
                    var_name: "x2",
                    coefficient: 2.0,
                },
                Coefficient {
                    var_name: "x4",
                    coefficient: 3.0,
                },
            ],
            operator: LTE,
            rhs: 25.0,
        },
    ],
    variables: [],
}
