src/nom/snapshots/lp_parser_rs__nom__lp_problem__test__serialization_lifecycle.snap
---
source: src/nom/lp_problem.rs
expression: "&serde_json_string"
---
"{\"name\":\"Problem name: diet\",\"sense\":\"Minimize\",\"objectives\":[{\"name\":\"obj1\",\"coefficients\":[{\"var_name\":\"x\",\"coefficient\":-0.5},{\"var_name\":\"y\",\"coefficient\":-2.0},{\"var_name\":\"z\",\"coefficient\":-8.0}]},{\"name\":\"obj2\",\"coefficients\":[{\"var_name\":\"y\",\"coefficient\":1.0},{\"var_name\":\"x\",\"coefficient\":1.0},{\"var_name\":\"z\",\"coefficient\":1.0}]},{\"name\":\"obj3\",\"coefficients\":[{\"var_name\":\"z\",\"coefficient\":10.0},{\"var_name\":\"x\",\"coefficient\":-2.5},{\"var_name\":\"y\",\"coefficient\":1.0}]}],\"constraints\":[{\"type\":\"Standard\",\"name\":\"c1\",\"coefficients\":[{\"var_name\":\"x1\",\"coefficient\":3.0},{\"var_name\":\"x2\",\"coefficient\":1.0},{\"var_name\":\"x3\",\"coefficient\":2.0}],\"operator\":\"EQ\",\"rhs\":30.0},{\"type\":\"Standard\",\"name\":\"c2\",\"coefficients\":[{\"var_name\":\"x1\",\"coefficient\":2.0},{\"var_name\":\"x2\",\"coefficient\":1.0},{\"var_name\":\"x3\",\"coefficient\":3.0},{\"var_name\":\"x4\",\"coefficient\":1.0}],\"operator\":\"GTE\",\"rhs\":15.0},{\"type\":\"Standard\",\"name\":\"c3\",\"coefficients\":[{\"var_name\":\"x2\",\"coefficient\":2.0},{\"var_name\":\"x4\",\"coefficient\":3.0}],\"operator\":\"LTE\",\"rhs\":25.0}],\"variables\":[]}"
